--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "1.0.6",
     "@tremor/react": "^3.12.1",
     "axios": "^1.6.3",
@@ -25,10 +26,13 @@
     "react-filepond": "^7.1.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "sonner": "^1.3.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
