--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "1.0.6",
+    "@supabase/supabase-js": "^2.39.2",
     "@tremor/react": "^3.12.1",
     "axios": "^1.6.3",
     "filepond": "^4.30.6",
     "formik": "^2.4.5",
     "jose": "^5.2.0",
     "keep-react": "^1.1.0",
+    "moment": "^2.30.1",
+    "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
@@ -31,7 +34,6 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.3.1",
-    "use-axios-client": "^2.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
